# aragorn1025.tw-stock-crawler

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.envs/: example.env
.github/workflows/: linters.yml  pylint.yml
src/: main.py  utils.py
src/settings/: __init__.py  settings.py
src/twse/: __init__.py
src/twse/errors/: __init__.py  api_error.py  data_error.py
src/twse/services/: __init__.py  crawler.py  gsheet_service.py
